# rust-zusi-xml-lib

./: Cargo.toml  LICENSE  README.md
src/: delphi_timestamp.rs  lib.rs  main.rs  serde_helpers.rs  xml.rs
src/xml/: date_time_format.rs  date_time_format_option.rs  format.rs  zusi.rs
src/xml/zusi/: buchfahrplan.rs  fahrplan.rs  info.rs  lib.rs  result.rs  zug.rs
src/xml/zusi/buchfahrplan/: fahrplan_zeile.rs  fahrzeug.rs  fahrzeug_zusatz_info.rs
src/xml/zusi/buchfahrplan/fahrplan_zeile/: fahrplan_abfahrt.rs  fahrplan_ankunft.rs  fahrplan_icon.rs  fahrplan_km.rs  fahrplan_name.rs  fahrplan_name_rechts.rs  fahrplan_richtungswechsel.rs  fahrplan_saegelinien.rs  fahrplan_signal_typ.rs  fahrplan_tunnel.rs  fahrplan_v_max.rs  fahrplan_v_max_gnt.rs  fahrplan_v_max_reduzierungen.rs
src/xml/zusi/fahrplan/: strecken_modul.rs  strecken_modul_eintrag.rs  zeit_modus.rs  zug_datei_eintrag.rs  zug_eintrag.rs
src/xml/zusi/fahrplan/strecken_modul/: phi.rs  (+1 more)
src/xml/zusi/info/: autor_eintrag.rs  datei.rs
src/xml/zusi/lib/: abhaengigkeit.rs  bremsstellung.rs  datei.rs  ereignis.rs  fahrplan_eintrag.rs  path.rs  phi.rs  position.rs  utm.rs  zusi_path.rs
src/xml/zusi/result/: fahrt_eintrag.rs
src/xml/zusi/zug/: aufgleis_referenz.rs  fahrplan_eintrag.rs  fahrzeug_varianten.rs  lod_zug.rs  standort_modus.rs  zug_typ.rs  zugsicherung_start_modus.rs
tests/: buchfahrplan.rs  datei.rs  fahrplan.rs  from_helpers_with_typed_zusi.rs  from_to_helpers.rs  from_to_helpers_with_zusi.rs  result.rs  timetable.rs  zug.rs
tests/deserialized/: buchfahrplan.rs  datei.rs  fahrplan.rs  mod.rs  result.rs  zug.rs
tests/serialized/: buchfahrplan-with-defaults.xml  buchfahrplan.xml  datei.xml  fahrplan-with-defaults.xml  fahrplan.xml  fahrplan_with-defaults.xml  result-with-defaults.xml  result.xml  result_with-defaults.xml  zug-with-defaults.xml  zug.xml
tests/utils/: mod.rs
tests/xml/: result-without-optionals.xml  result.xml  timetable-without-optionals.xml  timetable.xml  zug-without-optionals.xml  zug.xml
(+19 files in other folders)
