[package]
name = "zusi-xml-lib"
version = "0.6.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-clean = "1.0"
quick-xml = { version = "0.38", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0", features = ["derive"] }
serde-helpers = { path = "../serde-helpers" }
thiserror = "2.0"
time = { version = "0.3", features = ["macros", "serde-human-readable"] }
typed-builder = "0.23"

[dev-dependencies]
tempfile = "3.12"

[profile.dev]
debug = 'line-tables-only'

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true