[package]
name = "zusi-xml-lib"
version = "0.7.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-clean = "1.0.1"
quick-xml = { version = "0.40.1", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-helpers = { path = "../serde-helpers" }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["macros", "serde-human-readable"] }
typed-builder = "0.23.2"

[dev-dependencies]
tempfile = "3.27"

[profile.dev]
debug = 'line-tables-only'

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true